# tenhou-bot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STRATEGY.md  advisor_bridge.js  akochan_advisor.py  capture_ws.js  config.toml  package-lock.json  package.json  try_connect.js
src/: advisor.rs  ai.rs  client.rs  config.rs  main.rs  meld.rs  protocol.rs  shanten.rs  sim.rs  state.rs  tactics.rs  tile.rs  yaku.rs
